Opened 16 years ago

Closed 16 years ago

Last modified 16 years ago

#3960 closed bug (fixed)

BeIDE crashes on entry at r30849

Reported by: haiqu Owned by: bonefish
Priority: normal Milestone: R1
Component: Kits/Storage Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

[tcsetpgrp failed in terminal_inferior: Invalid Argument]
Thread 38713 caused an exception: Segment violation
Reading symbols from /boot/system/runtime_loader...done.
Loaded symbols for /boot/system/runtime_loader
Reading symbols from /boot/system/lib/libtracker.so...done.
Loaded symbols for /boot/system/lib/libtracker.so
Reading symbols from /boot/system/lib/libmedia.so...done.
Loaded symbols for /boot/system/lib/libmedia.so
Reading symbols from /boot/system/lib/libbe.so...done.
Loaded symbols for /boot/system/lib/libbe.so
Reading symbols from /boot/system/lib/libroot.so...done.
Loaded symbols for /boot/system/lib/libroot.so
Reading symbols from /boot/system/lib/libnetwork.so...done.
Loaded symbols for /boot/system/lib/libnetwork.so
Reading symbols from /boot/system/lib/libtranslation.so...done.
Loaded symbols for /boot/system/lib/libtranslation.so
Reading symbols from /boot/system/lib/libstdc++.r4.so...done.
Loaded symbols for /boot/system/lib/libstdc++.r4.so
Reading symbols from /boot/system/lib/libtextencoding.so...done.
Loaded symbols for /boot/system/lib/libtextencoding.so
Reading symbols from /boot/system/lib/libiconv.so...done.
Loaded symbols for /boot/system/lib/libiconv.so
Reading symbols from /boot/develop/BeIDE/plugins/Prefs_add_ons/MWBResPlugin...done.
Loaded symbols for /boot/develop/BeIDE/plugins/Prefs_add_ons/MWBResPlugin
Reading symbols from /boot/develop/BeIDE/plugins/Prefs_add_ons/ShellPlugin...done.
Loaded symbols for /boot/develop/BeIDE/plugins/Prefs_add_ons/ShellPlugin
Reading symbols from /boot/develop/BeIDE/plugins/Prefs_add_ons/gccPlugin...done.
Loaded symbols for /boot/develop/BeIDE/plugins/Prefs_add_ons/gccPlugin
Reading symbols from /boot/develop/BeIDE/plugins/Editor_add_ons/Commenter...done.
Loaded symbols for /boot/develop/BeIDE/plugins/Editor_add_ons/Commenter
[tcsetpgrp failed in terminal_inferior: Invalid Argument]
[Switching to team /boot/develop/BeIDE/BeIDE (38713) thread BeIDE (38713)]
0x007b2cda in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
(gdb) bt
#0  0x007b2cda in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#1  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#2  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#3  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#4  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#5  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#6  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#7  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#8  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#9  0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#10 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#11 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#12 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#13 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#14 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#15 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#16 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#17 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#18 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#19 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#20 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#21 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#22 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
#23 0x007b2cdc in BStatable::_OhSoStatable1 () from /boot/system/lib/libbe.so
---Type <return> to continue, or q <return> to quit---q
Quit
(gdb) 

Change History (5)

comment:1 by korli, 16 years ago

Component: ApplicationsKits/Storage Kit
Owner: changed from axeld to bonefish

It seems related to hrev30830. Assigning to Ingo for a check.

comment:2 by bonefish, 16 years ago

Status: newassigned

comment:3 by bonefish, 16 years ago

Fixed in hrev30851.

comment:4 by bonefish, 16 years ago

Resolution: fixed
Status: assignedclosed

comment:5 by haiqu, 16 years ago

Hey bonefish, thanks for the quick fix. ;-)

Note: See TracTickets for help on using tickets.