* {BEntry,BNode}::GetStat() were still passing the BeOS struct stat size to   the syscall. Anything beyond st_mtim was therefore not filled in. Fixes   the incorrectly shown creation times in Tracker. * The BStatable::GetStat() solution was not sufficient yet. We still have to   provide the old GetStat() symbol for BNode and BEntry, since those could be   used by old applications/libraries. We also still have to implement the old   GetStat() slots in the derived classes, but don't need to implement it in   the base class (was purely virtual before and is private now). * The old BStatable::_OhSoStatable1() slot function was not implemented   correctly. Calling the virtual function at the vtable slot obviously results   in an infinite recursion. The correct implementation would make use of the   Perform() method, but Be didn't provide one for BStatable, so we have to use   the old GetStat() method. Fixed #3960.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30851 a95241bf-73f2-0310-859d-f6bbb57e9c96