headers/os/storage/Entry.h
@@ -1,7 +1,7 @@
-//----------------------------------------------------------------------
-//  This software is part of the OpenBeOS distribution and is covered 
-//  by the OpenBeOS license.
-//---------------------------------------------------------------------
+/*
+ * Copyright 2002-2009, Haiku, Inc. All Rights Reserved.
+ * Distributed under the terms of the MIT License.
+ */
 /*!
 	\file Entry.h
 	BEntry and entry_ref interface declarations.
@@ -27,7 +27,7 @@ struct entry_ref {
   	entry_ref(dev_t dev, ino_t dir, const char *name);
 	entry_ref(const entry_ref &ref);
 	~entry_ref();
-	
+
   	status_t set_name(const char *name);
 
 	bool operator==(const entry_ref &ref) const;
@@ -87,29 +87,33 @@ private:
 	virtual	void _PennyEntry4();
 	virtual	void _PennyEntry5();
 	virtual	void _PennyEntry6();
-	
-	/*! Currently unused. */
-	uint32 _pennyData[4];
 
 	/*! BEntry implementation of BStatable::set_stat() */
 	virtual	status_t set_stat(struct stat &st, uint32 what);
-	
+
 	status_t set(int dir, const char *path, bool traverse);
 
-	/*! File descriptor for the entry's parent directory. */
-	int fDirFd;
-	
-	/*! Leaf name of the entry. */
-	char *fName;
-	
-	/*! The object's initialization status. */
-	status_t fCStatus;
-	
 	status_t set_name(const char *name);
 
 	status_t _Rename(BEntry& target, bool clobber);
 
 	void Dump(const char *name = NULL);
+
+	status_t _GetStat(struct stat *st) const;
+	virtual status_t _GetStat(struct stat_beos *st) const;
+
+private:
+	/*! Currently unused. */
+	uint32 _pennyData[4];
+
+	/*! File descriptor for the entry's parent directory. */
+	int fDirFd;
+
+	/*! Leaf name of the entry. */
+	char *fName;
+
+	/*! The object's initialization status. */
+	status_t fCStatus;
 };
 
 // C functions
