headers/private/storage/storage_support.h
@@ -21,10 +21,6 @@
 #include <string>
 
 
-// R5 compatibility
-#define R5_STAT_SIZE 60
-
-
 namespace BPrivate {
 namespace Storage {
 
